include_directories("${PROJECT_SOURCE_DIR}")

add_library(db Slice.cpp
                Status.cpp
                Arena.cpp
                Iterator.cpp
                Env.cpp
                Env_posix.cpp
                DBFormat.cpp
                Coding.cpp
                random.h
                atomic_pointer.h
                MutexLock.h
                port_posix.h
                posix_logger.h
                Common.h
                Logging.cpp
                Logging.h
                Comparator.h
                Comparator.cpp
                port_posix.cpp
                Options.h
                DB.h
                Cache.cpp
                Cache.h
                Table.cpp
                Table.h
                Block.cpp
                Block.h
                Format.cpp
                Format.h
                FilterPolicy.h
                FilterPolicy.cpp
                SkipList.h
                SkipList.cpp)